up the size of the small fonts on calibri themes, as 0.8 doesnt resolve and makes the text look squashed.
git-svn-id: svn://svn.newznab.com/nn/trunk@1102 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/www/views/themes/nzbsu/style.css
+++ b/www/views/themes/nzbsu/style.css
@@ -18,7 +18,7 @@ table.data td, table.data { border-color: #ddd;}
 
 input[type=text], input[type=password], textarea, select { background: #fff; }
 
-
+table.data td.less, div.resextra {font-size: 0.9em;}
 
 /* menu bar background colours*/
 #menulink a, #menulink :visited, #menulink li, #menu {color:#fff;  background-color:#333;}
